2009-12-14  Nayan Kumar K  <nayankk@gmail.com>

        Reviewed by Darin Adler.

        Fix for compilation errors in WML enabled builds.

        https://bugs.webkit.org/show_bug.cgi?id=32481

        * wml/WMLInputElement.cpp:
        (WebCore::WMLInputElement::setValue):
        (WebCore::WMLInputElement::setValueForUser):
        * wml/WMLInputElement.h:

2009-12-14  Andrei Popescu  <andreip@google.com>

        Reviewed by Darin Adler.

        [Android] Android needs ResourceError, ResourceResponse and
        ResourceRequest implementation.
        https://bugs.webkit.org/show_bug.cgi?id=32522

        Add implementation of ResourceError, ResourceResponse and ResourceRequest.
        No new tests needed, the existing tests should be sufficient.

        * platform/network/android/ResourceError.h: Added.
        (WebCore::ResourceError::ResourceError):
        * platform/network/android/ResourceRequest.h: Added.
        (WebCore::ResourceRequest::ResourceRequest):
        (WebCore::ResourceRequest::doUpdatePlatformRequest):
        (WebCore::ResourceRequest::doUpdateResourceRequest):
        (WebCore::ResourceRequest::setUserGesture):
        (WebCore::ResourceRequest::getUserGesture):
        * platform/network/android/ResourceResponse.h: Added.
        (WebCore::ResourceResponse::ResourceResponse):
        (WebCore::ResourceResponse::doUpdateResourceResponse):

2009-12-14  Sam Weinig  <sam@webkit.org>

        Fix the build.

        * page/Geolocation.cpp:
        * page/Geolocation.h:

2009-12-13  Sam Weinig  <sam@webkit.org>

        Reviewed by Dan Bernstein.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=32499
        Add client based Geolocation provider

        Add first cut of a client based Geolocation provider. This is guarded by
        ENABLE(CLIENT_BASED_GEOLOCATION) and is off by default for now. This adds a
        GeolocationControllerClient interface that no-one currently implements,
        but will in a subsequent patch.
